[package]
name = "fuzzing_test"
version = "0.1.0"
edition = "2021"
authors = ["Niklas Vogel"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpki-testing = {path = "../rpki-rp-testing-tool/"}
bytes		= {version = "1.1.0"}
#webs = {path = "../webs/"}
base64 = "0.20.0"
clap = "4.0.32"
#rpki		= {version = "0.14.1", features=["repository", "softkeys", "xml", "rrdp", "serde"]} 
rpki = {path="/home/nvogel/Schreibtisch/stuff/rpki-rs/", features=["repository", "softkeys", "xml", "rrdp", "serde"]}
openssl = "0.10.30"
rand = "0.8.5"
serde = { version = "1.0.*", default-features = false }
serde_json="1.0"
chrono = "0.4.23"
reqwest = {version="0.11.13",features=["blocking"]}
uuid =          {version = "0.8.2", features = ["serde", "v4"]}
asn1 = "0.13.0"
bcder = "0.6.1"
hex = "0.4.3"
strsim = "0.10.0"
ipnet = { version = "2", features = ["serde"] }
rasn = "0.7.0"
sha256 = "1.1.3"

[features]
roa_fuzz = []
roa_gen = []
mft_fuzz = []
mft_gen = []
standalone = []
crl_gen = []
crl_fuzz = []
notification_fuzz = []
snapshot_fuzz = []
cert_fuzz = []
cert_gen = []
gbr_fuzz = []
gbr_gen = []
aspa_fuzz = []
aspa_gen = []
